# testOpenCV

./: CMakeLists.txt  CMakeProjectOpenCV.cpp  CMakeProjectOpenCV.h  DispatchCmd.cpp  DispatchCmd.h
